--- a/src/app/component/store/order-summary/order-summary.component.html
+++ b/src/app/component/store/order-summary/order-summary.component.html
@@ -1,3 +1,24 @@
-<p>
-  order-summary works!
-</p>
+<div class="container">
+    <div class="col-lg-12">
+        <div class="row">
+          <div class="col-md-12">
+              <div class="alert alert-success" role="alert">
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                <span>    Thank you, your order has been placed.</span>
+              </div>
+          </div>
+        </div>
+        <div class="row">
+        </div>
+        <div class="row">
+          <div class="col-lg-12">
+            <span>Order Number:</span><b>202-1806580-746485</b>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <span>We've sent you an e-mail confirmation.</span>
+          </div>
+        </div>
+    </div> 
+  </div>
