--- a/src/app/component/store/product/product.component.html
+++ b/src/app/component/store/product/product.component.html
@@ -1,3 +1,6 @@
-<p>
-  product works!
-</p>
+<div>
+    <h4>{{data.name}}</h4>
+</div>
+<div>
+  <h4>{{data.price | currency:"CAD":"symbol-narrow"}}</h4>
+</div>
