--- a/src/app/component/store/shopping-cart/shopping-cart.component.html
+++ b/src/app/component/store/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,48 @@
-<p>
-  shopping-cart works!
-</p>
+<div class="col-lg-12" style="min-height: 100px;">
+    <div class="row" *ngIf="orders.length">
+          <div class="col-md-3 col-md-offset-1">
+              <b>Your shopping cart ({{orders.length}} items)</b>
+          </div>
+          <div class="col-md-2">                            
+              <a routerLink="" class="btn btn-primary" ><span>Continue Shopping</span><i class="glyphicon glyphicon-shopping-cart" style="margin-left: 5px"></i></a>
+          </div>
+          <div class="col-md-2">                            
+              <a routerLink="/orderSummary" class="btn btn-primary"><span>Place Order</span><i class="glyphicon glyphicon-shopping-cart" style="margin-left: 5px"></i></a>
+          </div>
+    </div>
+    <div class="row" *ngIf="orders.length == 0">
+          <div class="col-md-3 col-md-offset-1">
+              <b>Your shopping cart is empty. </b>
+          </div>
+          <div class="col-md-2">                            
+              <a routerLink="" class="btn btn-primary" ><span>Shop</span><i class="glyphicon glyphicon-shopping-cart" style="margin-left: 5px"></i></a>
+          </div>
+          <div class="col-md-2">                            
+              
+          </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <hr/>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+  <div class="col-md-4 col-md-offset-1">
+    <table class="table table-striped">
+      <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th></th>
+      </tr>
+      <tr *ngFor="let order of orders">  
+          <td>{{order.name}}</td>
+          <td>{{order.price | currency:"CAD":"symbol-narrow"}}</td>
+          <td><a class="btn" (click)="removeOrderItem(order)" ><i class="glyphicon glyphicon-remove" style="margin-left: 5px"></i></a></td>
+      </tr>
+      <tr>
+          <td align="right" colspan="3"><b>Total: {{totalPrice|currency:"CAD":"symbol-narrow"}}</b></td>                                
+      </tr>
+    </table>
+  </div>
+</div>                  
